Further scrollbar fixes and media query changes
Changed $M in variables to reflect iPad portrait width; fixed scrollbar
issues in chrome on desktop for code blocks on article pages.

--- a/grunt_assets/style.scss
+++ b/grunt_assets/style.scss
@@ -643,15 +643,17 @@ article {
         }
         code {
             overflow-x: scroll;
-            // margin-left: -25vw;
             @include MQ(M) {
                 max-width: 90%;
-                margin-left:25vw;
-            }
-            @include MQ(L) {
                 display:block;
                 margin-left:25vw;
+                white-space: pre-wrap;
+            }
+            @include MQ(L) {
+                white-space: pre-wrap;   
+                margin-left:25vw;
                 max-width: $content-max-width;
+                overflow-x: hidden;
             }
         }
     }
